# rg_soundmap

./: Cargo.toml  README.md
src/: lib.rs
src/types/: chart.rs  manifest.rs  mod.rs  soundmap.rs
test_files/: pack_test.smap
test_files/example/: content.json  manifest.json  soundmap.json
test_files/example/charts/: example.json
test_files/test/: content.json  manifest.json
test_files/unpack_result/: content.json  manifest.json
