[package]
name = "rg_soundmap"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "A Rust library for managing a sound map format."

[dependencies]
# Json Processing
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# File Compression
tar = "0.4.44"
lz4 = "1.28.1"
